--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
 	<!-- Google css -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400%7CRaleway:300,400,500,600,700%7CLato:300,400,400italic,600,700" rel="stylesheet" type="text/css" />
 
-	
-
-	<!-- Base CSS DATATABLES -->
-	<link href="assets/css/layout-datatables.css" rel="stylesheet" type="text/css" />
-
+	<!-- Bootstrap css-->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="assets/plugins/bootstrap.datepicker/css/bootstrap-datepicker.min.css">
 
 	<!-- Asset css -->
 	<link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -25,9 +23,9 @@
 	<link href="assets/css/header-1.css" rel="stylesheet" type="text/css" />
 	<link href="assets/css/color_scheme/green.css" rel="stylesheet" type="text/css" id="color_scheme" />
 
-	<!-- Bootstrap css-->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/plugins/bootstrap.datepicker/css/bootstrap-datepicker.min.css">
+
+	<!-- Base CSS DATATABLES -->
+	<link href="assets/css/layout-datatables.css" rel="stylesheet" type="text/css" />
 
 
 	<style type="text/css">
@@ -59,8 +57,6 @@
 			box-sizing: content-box;
 		}
 	</style>
-
-
 
 </head>
 
@@ -112,7 +108,10 @@
 		<section id="middle">
 			<div class="container">
 				<div class="col-lg-6">
-					<input type="text" id="datePicker" class="form-control" value="2019-06-27">
+					<!--input type="text" id="datePicker" class="form-control" value="2019-06-27"-->
+					<!-- DateTimePicker 위젯를 적용하기 위한 TextBox를 선언한다. -->
+					<input id="fromDate" placeholder="Select start date" class="fromDate" name="fromDate" type="text">
+					<input id="toDate" placeholder="Select end date" class="toDate" name="toDate" type="text">
 				</div>
 
 				<div class="col-lg-6">
@@ -218,7 +217,7 @@
 					</div>
 
 					<div class="panel-body">
-						<table class="table table-striped table-bordered table-hover" id="sample">
+						<table class="table table-striped table-bordered table-hover" id="sample2">
 							<thead>
 								<tr>
 									<th>Day of post</th>
