--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 	<meta name="Author" content="Dorin Grigoras [www.stepofweb.com]" />
 	<meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0" />
 	<!-- Google css -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400%7CRaleway:300,400,500,600,700%7CLato:300,400,400italic,600,700" rel="stylesheet" type="text/css" />
+	<link
+		href="https://fonts.googleapis.com/css?family=Open+Sans:300,400%7CRaleway:300,400,500,600,700%7CLato:300,400,400italic,600,700"
+		rel="stylesheet" type="text/css" />
 
 	<!-- Bootstrap css-->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -27,36 +29,8 @@
 	<!-- Base CSS DATATABLES -->
 	<link href="assets/css/layout-datatables.css" rel="stylesheet" type="text/css" />
 
-
-	<style type="text/css">
-		.search {
-			position: absolute;
-			z-index: 1000;
-			top: 20px;
-			left: 20px;
-		}
-
-		.search #address {
-			width: 150px;
-			height: 20px;
-			line-height: 20px;
-			border: solid 1px #555;
-			padding: 5px;
-			font-size: 12px;
-			box-sizing: content-box;
-		}
-
-		.search #submit {
-			height: 30px;
-			line-height: 30px;
-			padding: 0 10px;
-			font-size: 12px;
-			border: solid 1px #555;
-			border-radius: 3px;
-			cursor: pointer;
-			box-sizing: content-box;
-		}
-	</style>
+	<!-- search css-->
+	<link href="css/search.css" rel="stylesheet" type="text/css" />
 
 </head>
 
@@ -107,85 +81,26 @@
 		<!-- map & table -->
 		<section id="middle">
 			<div class="container">
-				<div class="col-lg-6">
+				<div class="col-lg-12">
 					<!--input type="text" id="datePicker" class="form-control" value="2019-06-27"-->
 					<!-- DateTimePicker 위젯를 적용하기 위한 TextBox를 선언한다. -->
 					<input id="fromDate" placeholder="Select start date" class="fromDate" name="fromDate" type="text">
 					<input id="toDate" placeholder="Select end date" class="toDate" name="toDate" type="text">
 				</div>
 
-				<div class="col-lg-6">
-					<div class="panel-heading">
-						<span class="title elipsis">
-							<strong>Table</strong> <!-- panel title -->
-						</span>
-					</div>
-
-					<div class="panel-body">
-						<table class="table table-striped table-bordered table-hover" id="sample">
+				<div class="col-lg-12">
+					<div class="table-responsive">
+						<table class="table table-bordered table-striped">
 							<thead>
 								<tr>
-									<th>Day of post</th>
-									<th>Post</th>
-									<th>Location</th>
+									<th>위치</th>
+									<th>버즈 발생량</th>
 								</tr>
 							</thead>
 							<tbody>
 								<tr>
-									<td>2020.06.13
-									</td>
-									<td>약속
-									</td>
-									<td>수원역
-									</td>
-								</tr>
-								<tr>
-									<td>2020.06.13
-									</td>
-									<td>쇼핑
-									</td>
-									<td>수원롯데몰
-									</td>
-								</tr>
-								<tr>
-									<td>2020.06.13
-									</td>
-									<td>술
-									</td>
-									<td>수원로데오거리
-									</td>
-								</tr>
-								<tr>
-									<td>2020.06.13
-									</td>
-									<td>대중교통
-									</td>
-									<td>수원역
-									</td>
-								</tr>
-								<tr>
-									<td>2020.06.13
-									</td>
-									<td>대중교통
-									</td>
-									<td>수원역
-									</td>
-								</tr>
-								<tr>
-									<td>2020.06.13
-									</td>
-									<td>술
-									</td>
-									<td>수원로데오거리
-									</td>
-								</tr>
-								<tr>
-									<td>2020.06.13
-									</td>
-									<td>쇼핑
-									</td>
-									<td>수원롯데몰
-									</td>
+									<td>탑골공원</td>
+									<td>144</td>
 								</tr>
 							</tbody>
 						</table>
@@ -194,7 +109,7 @@
 
 				<div id="map" class="col-lg-12" style="height: 400px;">
 					<div class="search" style="">
-						<input id="address" type="text" placeholder="검색할 주소" value="불정로 6" />
+						<input id="address" type="text" placeholder="검색할 주소" value="종로 99" />
 						<input id="submit" type="button" value="주소 검색" />
 					</div>
 				</div>
@@ -206,87 +121,100 @@
 		<!-- table -->
 		<section>
 			<div class="container">
-				<div id="panel-5" class="panel panel-default">
-
-					<div class="panel-heading">
-						<span class="title elipsis">
-							<strong>Table</strong> <!-- panel title -->
-						</span>
-
-
+				<div class="col-lg-12">
+					<div id="panel-5" class="panel panel-default">
+						<div class="panel-body">
+							<table class="table table-striped table-bordered table-hover" id="sample">
+								<thead>
+									<tr>
+										<th>발생 시간</th>
+										<th>발생 위치</th>
+										<th>버즈 내용</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td>2020.07.07
+										</td>
+										<td>탑골공원
+										</td>
+										<td>술과 음식이 다양해서 좋은 #파쇼<br>
+											#피맥 시작으로 두툼한 스테이크까지<br>
+											맛있는 음식 먹으며 스트레스 팍팍 풀기 !
+										</td>
+									</tr>
+									<tr>
+										<td>2020.07.07
+										</td>
+										<td>탑골공원
+										</td>
+										<td>지금‥ 이 순간~<br>
+											익선동 나들이~<br>
+											#지금이순간 #생활의발견 #소확행 #평범한하루 #소소한일상 #여유로움 #편안함 #쉼 #힐링 #해피 #2020년 #여름 #7월<br>
+											#생활속거리유지 #마스크착용은필수 #종로 #종로3가 #탑골공원 #낙원악기상가 #익선동 #한옥거리
+										</td>
+									</tr>
+									<tr>
+										<td>2020.07.07
+										</td>
+										<td>탑골공원
+										</td>
+										<td>#하늘마루역사이야기 #하늘마루 #역사 #이야기 #보물3호 #보물 #서울 #원각사지 #대원각사비 #탑골공원
+										</td>
+									</tr>
+									<tr>
+										<td>2020.07.07
+										</td>
+										<td>탑골공원
+										</td>
+										<td>#다이나믹듀오 #Lydiapaek - 있어줘(#2015)<br>
+											무리라고 느꼈겠지<br>
+											다들 우리 둘이<br>
+											근데 우린 무리 뉴처럼 특별해<br>
+											깼지 물리의 법칙
+										</td>
+									</tr>
+									<tr>
+										<td>2020.07.07
+										</td>
+										<td>탑골공원
+										</td>
+										<td> #천하장사#힘유진 #탑골공원<br>
+											#노래테이프 #옛날노래 #빈티지인테리어 #빈티지소품 #근현대사 #근대사 #90년대가요 #옛노래 #카세트테이프 #8090 #7080<br>
+											#옛날테이프 #추억노래 #음악테이프 #테이프꽂이 #옛날소품 #빈티지소품 #탑골노래 #탑골가요 #탑골공원 #200707플라타노스
+										</td>
+									</tr>
+									<tr>
+										<td>2020.07.06
+										</td>
+										<td>탑골공원
+										</td>
+										<td>#임재범 #박정현 - 사랑보다 깊은 상처(#1998)<br>
+											추억을 버리긴 너무나 아쉬워<br>
+											난 너를 기억해 이젠 말할께<br>
+											나의 오랜 기다림<br>
+											너 떠나고 너의 미소 볼 수 없지만 항상 기억할께<br>
+											너의 그 모든 걸 사랑보다 깊은 상처만 준 난 이젠 깨달았어<br>
+											후회하고 있다는걸
+										</td>
+									</tr>
+									<tr>
+										<td>2020.07.06
+										</td>
+										<td>탑골공원
+										</td>
+										<td>혜은이언니(?)가 생각나네.<br>
+											안개속에서. 나는울었어.<br>
+											외로워서.한참을 울었어.<br>
+											#열정#18번#탑골공원#목소리야돌아와<br>
+											#부산여자#간호사#RN#미미#mimi<br>
+											#내사진#셀카#셀피#널스타그램#일상#데일리#좋아요#좋반#좋테#좋아요반사#좋아요테러#인친해요#선팔은댓글#DM잘안봐요#소통댓글좋아요
+										</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
 					</div>
-
-					<div class="panel-body">
-						<table class="table table-striped table-bordered table-hover" id="sample2">
-							<thead>
-								<tr>
-									<th>Day of post</th>
-									<th>Post</th>
-									<th>Location</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<td>2020.06.13
-									</td>
-									<td>약속
-									</td>
-									<td>수원역
-									</td>
-								</tr>
-								<tr>
-									<td>2020.06.13
-									</td>
-									<td>쇼핑
-									</td>
-									<td>수원롯데몰
-									</td>
-								</tr>
-								<tr>
-									<td>2020.06.13
-									</td>
-									<td>술
-									</td>
-									<td>수원로데오거리
-									</td>
-								</tr>
-								<tr>
-									<td>2020.06.13
-									</td>
-									<td>대중교통
-									</td>
-									<td>수원역
-									</td>
-								</tr>
-								<tr>
-									<td>2020.06.13
-									</td>
-									<td>대중교통
-									</td>
-									<td>수원역
-									</td>
-								</tr>
-								<tr>
-									<td>2020.06.13
-									</td>
-									<td>술
-									</td>
-									<td>수원로데오거리
-									</td>
-								</tr>
-								<tr>
-									<td>2020.06.13
-									</td>
-									<td>쇼핑
-									</td>
-									<td>수원롯데몰
-									</td>
-								</tr>
-							</tbody>
-						</table>
-					</div>
-
-
 				</div>
 
 			</div>
@@ -295,11 +223,11 @@
 	</div>
 
 	<!-- JQuery script -->
-	
+
 	<!-- JAVASCRIPT FILES -->
 	<script type="text/javascript">var plugin_path = 'assets/plugins/';</script>
 	<script type="text/javascript" src="assets/plugins/jquery/jquery-2.2.3.min.js"></script>
-	
+
 	<!--Asset script -->
 	<script type="text/javascript" src="assets/js/scripts.js"></script>
 
