--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 								<li class="">
 									<!-- SERVICES -->
 									<a href="#">
-										Restapi documentaiton
+										OpenAPI documentaiton
 									</a>
 								</li>
 							</ul>
