--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		rel="stylesheet" type="text/css" />
 
 	<!-- Bootstrap css-->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/plugins/bootstrap.datepicker/css/bootstrap-datepicker.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="assets/plugins/datetimepickerstyle.css">
 
 	<!-- Asset css -->
 	<link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -226,7 +226,9 @@
 
 	<!-- JAVASCRIPT FILES -->
 	<script type="text/javascript">var plugin_path = 'assets/plugins/';</script>
-	<script type="text/javascript" src="assets/plugins/jquery/jquery-2.2.3.min.js"></script>
+	<script type="text/javascript" src="assets/plugins/jquery/jquery-2.2.3.min.js"></script>	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+
 
 	<!--Asset script -->
 	<script type="text/javascript" src="assets/js/scripts.js"></script>
@@ -235,8 +237,9 @@
 	<script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
 
 	<!-- datapicker script -->
-	<script src="assets/plugins/bootstrap.datepicker/js/bootstrap-datepicker.min.js"></script>
-	<script src="assets/plugins/bootstrap.datepicker/locales/bootstrap-datepicker.ko.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.0/moment.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.0/locale/ko.js"></script>
+	<script src="assets/plugins/bootstrap-datetimepicker.js"></script>
 
 	<!--map script-->
 	<script src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=5zeynoveif"></script>
