--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
 
 	<!-- search css-->
 	<link href="css/search.css" rel="stylesheet" type="text/css" />
-
 </head>
 
 <body class="enable-animation">
@@ -107,13 +106,27 @@
 					</div>
 				</div>
 
-				<div id="map" class="col-lg-12" style="height: 400px;">
-					<div class="search" style="">
+				<div class="map_wrap">
+					<div id="map" class="col-lg-12" style="height: 400px; position: relative; overflow: hidden; z-index: 22;">
+						<div id="menu_wrap" class="bg_white" style="z-index: 100;">
+							<div class="option">
+								<div>
+									<form onsubmit="searchPlaces(); return false;">
+										키워드 : <input type="text" value="이태원 맛집" id="keyword" size="15">
+										<button type="submit">검색하기</button>
+									</form>
+								</div>
+							</div>
+							<hr>
+							<ul id="placesList"></ul>
+							<div id="pagination"></div>
+						</div>	
+						<!--div class="search" style="">
 						<input id="address" type="text" placeholder="검색할 주소" value="종로 99" />
 						<input id="submit" type="button" value="주소 검색" />
+					</div-->
 					</div>
 				</div>
-
 			</div>
 		</section>
 		<!-- map & table -->
@@ -222,11 +235,12 @@
 		<!-- table -->
 	</div>
 
+
 	<!-- JQuery script -->
 
 	<!-- JAVASCRIPT FILES -->
 	<script type="text/javascript">var plugin_path = 'assets/plugins/';</script>
-	<script type="text/javascript" src="assets/plugins/jquery/jquery-2.2.3.min.js"></script>	
+	<script type="text/javascript" src="assets/plugins/jquery/jquery-2.2.3.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 
 
@@ -269,6 +283,11 @@
 
 	<!-- select2-->
 	<script type="text/javascript" src="assets/plugins/select2/js/select2.full.min.js"></script>
+
+
+	<script type="text/javascript"
+		src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=8568a255b6f0fef0b808ee71c586432d&libraries=services"></script>
+
 
 
 	<!-- controls script -->
