--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 					<!--input type="text" id="datePicker" class="form-control" value="2019-06-27"-->
 					<!-- DateTimePicker 위젯를 적용하기 위한 TextBox를 선언한다. -->
 					<input id="fromDate" placeholder="Select start date" class="fromDate" name="fromDate" type="text"
-						data-date-format="YYYY-MM-DD hh:mm" value="2020-05-11">
+						data-date-format="YYYY-MM-DD hh:mm" value="">
 					<input id="toDate" placeholder="Select end date" class="toDate" name="toDate" type="text"
-						data-date-format="YYYY-MM-DD hh:mm" value="2020-08-11">
+						data-date-format="YYYY-MM-DD hh:mm" value="">
 				</div>
 
 				<div class="col-lg-12">
@@ -116,7 +116,7 @@
 							<div class="option">
 								<div>
 									<form onsubmit="searchPlaces(); return false;">
-										키워드 : <input type="text" value="한강" id="keyword" size="15">
+										키워드 : <input type="text" value="" id="keyword" size="15">
 										<button type="submit">검색하기</button>
 									</form>
 								</div>
@@ -125,10 +125,6 @@
 							<ul id="placesList"></ul>
 							<div id="pagination"></div>
 						</div>
-						<!--div class="search" style="">
-						<input id="address" type="text" placeholder="검색할 주소" value="종로 99" />
-						<input id="submit" type="button" value="주소 검색" />
-					</div-->
 					</div>
 				</div>
 			</div>
@@ -140,8 +136,10 @@
 		<section>
 			<div class="container">
 				<div class="col-lg-12">
-					<div id="panel-5" class="panel panel-default">
+					<div class="panel panel-default">
 						<div class="panel-body">
+							<input class="form-control" id="myInput" type="text" placeholder="Search..">
+							<br>
 							<table class="table table-striped table-bordered table-hover" id="bottomTable">
 								<thead>
 									<tr>
@@ -150,7 +148,7 @@
 										<th>버즈 내용</th>
 									</tr>
 								</thead>
-								<tbody></tbody>
+								<tbody id="myTable"></tbody>
 							</table>
 						</div>
 					</div>
@@ -161,16 +159,17 @@
 	</div>
 
 
+
+
+
 	<!-- JQuery script -->
 	<script src="http://code.jquery.com/jquery-2.2.3.min.js"></script>
 	<script type="text/javascript" src="https://github.com/moment/moment/blob/develop/src/moment.js"></script>
-
 
 	<!-- JAVASCRIPT FILES -->
 	<script type="text/javascript">var plugin_path = 'assets/plugins/';</script>
 	<script type="text/javascript" src="assets/plugins/jquery/jquery-2.2.3.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-
 
 	<!--Asset script -->
 	<script type="text/javascript" src="assets/js/scripts.js"></script>
