--- a/open_doc.html
+++ b/open_doc.html
@@ -13,7 +13,9 @@
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
 
     <!-- WEB FONTS : use %7C instead of | (pipe) -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400%7CRaleway:300,400,500,600,700%7CLato:300,400,400italic,600,700" rel="stylesheet" type="text/css" />
+    <link
+        href="https://fonts.googleapis.com/css?family=Open+Sans:300,400%7CRaleway:300,400,500,600,700%7CLato:300,400,400italic,600,700"
+        rel="stylesheet" type="text/css" />
 
     <!-- CORE CSS -->
     <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -72,6 +74,12 @@
                     AVAILABLE CLASSES:
                     submenu-dark = dark sub menu
                 -->
+
+                <!-- Mobile Menu Button -->
+                <button class="btn btn-mobile" data-toggle="collapse" data-target=".nav-main-collapse">
+                    <i class="fa fa-bars"></i>
+                </button>
+
                 <div class="navbar-collapse pull-right nav-main-collapse collapse submenu-dark">
                     <nav class="nav-main">
 
@@ -100,7 +108,7 @@
                     </h4>
                     <h5 class="col-sm-10 col-sm-offset-1 weight-300 text-muted size-20">
                         검색범위 최소시간 : 기준출발시간 |
-                        검색범위 최대시간 : 기준도착시간 | 
+                        검색범위 최대시간 : 기준도착시간 |
                         location : 검색위치</h5>
                 </div>
             </div>
