--- a/open_doc.html
+++ b/open_doc.html
@@ -41,7 +41,7 @@
             <div class="sidebar-nav">
                 <div class="navbar navbar-default" role="navigation">
 
-                    <a class="logo text-center" href="http://127.0.0.1:8887/index.html">
+                    <a class="logo text-center" href="index.html">
                         <img src="assets/images/soljik-black.png" alt="" style="width: 126px; height: 80px;">
                     </a>
 
@@ -51,7 +51,7 @@
                         <!-- MENU -->
                         <ul class="nav navbar-nav">
                             <li>
-                                <a href="http://127.0.0.1:8887/index.html">
+                                <a href="index.html">
                                     인구 밀집도 기반데이터
                                 </a>
                             </li>
