--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 				<div class="col-lg-12">
 					<!--input type="text" id="datePicker" class="form-control" value="2019-06-27"-->
 					<!-- DateTimePicker 위젯를 적용하기 위한 TextBox를 선언한다. -->
-					<input id="fromDate" placeholder="Select start date" class="fromDate" name="fromDate" type="text"
+					<input id="fromDate" class="fromDate" name="fromDate" type="text"
 						data-date-format="YYYY-MM-DD hh:mm" value="">
-					<input id="toDate" placeholder="Select end date" class="toDate" name="toDate" type="text"
+					<input id="toDate" class="toDate" name="toDate" type="text"
 						data-date-format="YYYY-MM-DD hh:mm" value="">
 				</div>
 
@@ -120,7 +120,7 @@
 							<div class="option">
 								<div>
 									<form onsubmit="searchPlaces(); return false;">
-										키워드 : <input type="text" value="" id="keyword" size="15">
+										키워드 : <input type="text" value="탑골공원" id="keyword" size="15">
 										<button type="submit">검색하기</button>
 									</form>
 								</div>
@@ -177,10 +177,6 @@
 		</section>
 		<!-- table -->
 	</div>
-
-
-
-
 
 	<!-- JQuery script -->
 	<script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
